[package]
name = "aticx-demo"
version = "0.1.0"
authors = ["wlx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.0.2"
env_logger = "0.7"
futures = "0.3"
oxide-auth = "0.5.0"
oxide-auth-actix = { version = "0.1.0" }
reqwest = "=0.9.5"
serde = "1.0"
serde_json = "1.0"
url = "2"
serde_urlencoded = "0.7"
